--- a/gb/21/9/4/n13210934.md
+++ b/gb/21/9/4/n13210934.md
@@ -1,28 +1,28 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hraqrb3904/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hraqrb3904/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hraqrb3904/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hraqrb3904/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hraqrb3904/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hraqrb3904/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hraqrb3904/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hraqrb3904/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hraqrb3904/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hraqrb3904/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hraqrb3904/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hraqrb3904/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hraqrb3904/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hraqrb3904/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hraqrb3904/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hraqrb3904/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hraqrb3904/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hraqrb3904/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hraqrb3904/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hraqrb3904/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hraqrb3904/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hraqrb3904/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hraqrb3904/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hraqrb3904/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【财商天下】北京调控过猛 楼市有大危机</h2>
-<a href="https://d239x61949z6p.cloudfront.net/S5zmA9cyq"><img width="600" src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hraqrb3904/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d1ucfc2ix2o07u.cloudfront.net/B9fmA9cyw"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2021年09月05日讯】最近，关于大陆房地产业的坏消息实在是太多了，住宅成交量持续降温，房企销售额下降，地产业掀起离职大潮，而北京当局对房地产的调控力度却丝毫不减，最近还波及到了北京的<ahref="https://github.com/hraqrb3904/djy/blob/master/gb/tag/%E6%B0%91%E5%AE%BF.md#1">民宿</a>和短租平台。</p>
+	<p>【大纪元2021年09月05日讯】最近，关于大陆房地产业的坏消息实在是太多了，住宅成交量持续降温，房企销售额下降，地产业掀起离职大潮，而北京当局对房地产的调控力度却丝毫不减，最近还波及到了北京的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B0%91%E5%AE%BF.md#1">民宿</a>和短租平台。</p>
 <p>那么，在中国经济正在转向衰退之际，北京调控房地产的决心为何还如此之大？而近期，学者和业界人士纷纷警告说，中国的房地产市场面临极大的风险，这个风险又到底是什么？我们今天就来谈谈这些问题。</p>
-<p><a src=""></a><a href="https://d239x61949z6p.cloudfront.net/S5zmA9cyq"><img width="600" src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hraqrb3904/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/490acc1f-b726-4174-b7f0-9436fc5addb0?r=16x9&amp;d=768" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><a src=""></a><a href="https://d1ucfc2ix2o07u.cloudfront.net/B9fmA9cyw"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/490acc1f-b726-4174-b7f0-9436fc5addb0?r=16x9&amp;d=768" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>政策持续打压下 房地产前景黯淡</h2>
-<p>最近几个月，北京当局持续整治房地产市场，各地调控措施仍在不断升级。一线城市也纷纷出台相关政策打压房价，比如<ahref="https://github.com/hraqrb3904/djy/blob/master/gb/tag/%E4%B8%8A%E8%B0%83%E6%8C%89%E6%8F%AD%E5%88%A9%E7%8E%87.md#1">上调按揭利率</a>，限制房屋赠与，对二手房上网交易进行价格核查，对学区房进行限制，推出离婚限购新规等等。</p>
+<p>最近几个月，北京当局持续整治房地产市场，各地调控措施仍在不断升级。一线城市也纷纷出台相关政策打压房价，比如<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%8A%E8%B0%83%E6%8C%89%E6%8F%AD%E5%88%A9%E7%8E%87.md#1">上调按揭利率</a>，限制房屋赠与，对二手房上网交易进行价格核查，对学区房进行限制，推出离婚限购新规等等。</p>
 <p>7月23日，中共住建部等8个部门还发出一个“持续整治规范房地产市场秩序的通知”，计划用3年时间，对房地产业所有环节进行管控。</p>
-<p>而来自中原地产研究中心的统计资料显示，截至8月31日，平均每月有超过50次的<ahref="https://github.com/hraqrb3904/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7%E8%B0%83%E6%8E%A7.md#1">房地产调控</a>；2021年房地产调控累计突破400次，全面刷新历史纪录。</p>
+<p>而来自中原地产研究中心的统计资料显示，截至8月31日，平均每月有超过50次的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7%E8%B0%83%E6%8E%A7.md#1">房地产调控</a>；2021年房地产调控累计突破400次，全面刷新历史纪录。</p>
 <p>在政策强力调控下，8月份全中国房地产市场继续降温。据克而瑞统计，29个重点监测城市商品住宅成交面积同比、环比分别下降22%和10%，比2019年同期下降了8%，降幅和7月相比有所扩大。克而瑞的数据还显示，百强房企8月份的整体业绩，同比下降20.7%、环比下降10.7%，不及上半年和历史同期；累计业绩的增速，自二季度以来持续放缓。</p>
 <p>与此同时，房地产企业也掀起了大规模的离职潮。第一财经报导，从财务报告数据来看，近三年，头部房企的员工人数，都从超过13万的高峰大幅下降。而最新的中报数据显示，富力、泰禾等房企员工的人数，在一年中大降超过30%。</p>
 <p>一位千亿级房企的员工说，最近几个月，他周围的很多人跳槽去了互联网、央企、国企，而一名刚刚转行几个月的前地产人甚至形容说，自己就像风口上掉下来的猪。</p>
 <p>虽然房地产行业的薪酬仍然处于高位，但据机构统计，大部分上市房企薪酬总量增速连续收窄，2020年的人均薪酬首次出现下降，高管薪酬也同比下降5%。</p>
-<h2>北京<ahref="https://github.com/hraqrb3904/djy/blob/master/gb/tag/%E6%B0%91%E5%AE%BF.md#1">民宿</a>遭整肃成“下一个行业”？</h2>
+<h2>北京<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B0%91%E5%AE%BF.md#1">民宿</a>遭整肃成“下一个行业”？</h2>
 <p>而最近，大家看到，北京民宿行业又成了被整肃的“下一个行业”，当局突然发出通知，所有线上出租平台展示的房屋，即时全线下架。北京市住建委的通知说，全市范围内的房源暂不得开放经营。估计受到影响的业主，会有十万左右。</p>
 <p>其实，早在去年底，北京市已经发布了一个“规范管理短租住房的通知”，并从今年2月份开始实施，目的据称是要贯彻“房住不炒”等住房制度，还要解决带来的治安、扰民等问题。里面要求民宿必须有“六证”，而所谓“不合规”，就是指没有“六证”。</p>
 <p>但是，这“六证”中有几个非常难以办到，比如，经营者和所在地派出所签订的治安责任保证书，还有所在小区业主委员会、物业管理委员会、本栋楼内其他业主书面同意的证明等等。</p>
 <p>这次，北京民宿被大面积下架，正赶在环球影城开业、北京即将进入冬奥会周期之时，让经营者损失惨重，因为其中不少人，就是瞄准了环球影城和冬奥会的商机而来。这些民宿集中在延庆、昌平等地，有的是整个村子都改成了民宿。一位有30间房源的民宿经营者估算，不算装修等前期投资成本，30间房意味着每月将亏损大约12万元。</p>
 <p>当然，这些监管措施，显然不是单纯为了防控疫情或者是解决治安、扰民等问题，主要还是为了加强对民众的管控，就像一些评论所说的，民宿行业垮台之后，外省人在北京的住宿将支付更高的成本住酒店。如此一来，很多不被政府欢迎的人，比如低收入的访民，维权人士，进京将会更加困难。</p>
-<h2><ahref="https://github.com/hraqrb3904/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7%E8%B0%83%E6%8E%A7.md#1">房地产调控</a>不放松 北京到底担心什么？</h2>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7%E8%B0%83%E6%8E%A7.md#1">房地产调控</a>不放松 北京到底担心什么？</h2>
 <p>从目前来看，北京当局对房地产的调控还将持续。8月31日，中共住建部副部长倪虹在新闻发布会上提到，下一步将继续稳地价、稳房价、稳预期，重点坚持“房住不炒”，防范和化解市场风险，以及建立人、房、地、钱四位一体的联动新机制等。</p>
 <p>那么，北京要继续对房地产实施严格调控，到底是在担心什么呢？我们来看一下，东吴证券首席经济学家任泽平的两篇文章，似乎对此做出了回答。</p>
 <p>任泽平曾在8月发表文章，认为中国房地产改革最重要的是要软着陆，避免硬着陆，因为硬着陆的代价很大，比如2008年的美国次贷危机，还有80年代时，日本的房地产泡沫破裂，都对一国经济发展造成了极大的冲击。</p>
@@ -53,48 +53,48 @@
 撰文：财商经济研究所<br />
 剪辑：曲歌<br />
 监制：文静<br />
-<ahref="https://github.com/hraqrb3904/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
+<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
 <p>责任编辑：连书华</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hraqrb3904/djy/blob/master/gb/21/8/31/n13200381.md#1">【财商天下】赵薇被封杀 背后有大故事</a></li>
-<li><a href="https://github.com/hraqrb3904/djy/blob/master/gb/21/9/1/n13203346.md#1">【财商天下】绕过拜登政府 华尔街与北京勾兑</a></li>
-<li><a href="https://github.com/hraqrb3904/djy/blob/master/gb/21/9/2/n13205829.md#1">【财商天下】李子柒报警 称资本真是好手段</a></li>
-<li><a href="https://github.com/hraqrb3904/djy/blob/master/gb/21/9/3/n13208754.md#1">【财商天下】多国央行“收水” 中国反其道而行</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/8/31/n13200381.md#1">【财商天下】赵薇被封杀 背后有大故事</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/1/n13203346.md#1">【财商天下】绕过拜登政府 华尔街与北京勾兑</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/2/n13205829.md#1">【财商天下】李子柒报警 称资本真是好手段</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/3/n13208754.md#1">【财商天下】多国央行“收水” 中国反其道而行</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/15/n10395165.md#1" target="_blank">【还原史实】谁在对日抗战？谁在借机发展？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11397207.md#1" target="_blank">宗教与民主研究院主任：感谢法轮功坚持真理</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/13/n10054247.md#1" target="_blank">杨宁：不容粉饰 巴金季羡林韦君宜痛批文革</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/3/8/n2455187.md#1" target="_blank">【热点互动】自焚 中共自导的梦魇(3)</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/8/28/n13194661.md#1">【未解之谜】不可思议的撞脸 是转世还是巧合？</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/8/27/n13191066.md#1">古人最常用的化妆品是什么？</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不懂中文 会唱中文歌 邓丽君归来？</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/8/29/n13196066.md#1">告别进化论</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/8/28/n13194295.md#1">如何帮助孩子自信？专家教四个技巧</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/4/n13210242.md#1">【十字路口】菅义伟闪辞3原因 攸关世界格局</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/3/n13208120.md#1">【珍言真语】周小龙：议员未尽职 艺术中心受打压</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/4/n13209309.md#1">拉脱维亚香港之路展览遇阻 策展人：港人不放弃</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/2/n13204092.md#1">Costco美国门店对特定商品实施限购</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/1/n13203696.md#1">一直拒绝扮演父亲角色 梁朝伟终于道出原因</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/1/n13203826.md#1">【新闻看点】赵薇遭大腕切割 女生查寝室骄横挨轰</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/2/n13206555.md#1">孙俪眼球凸出遭疑得甲亢 网民：证明没医美</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/1/n13203696.md#1">一直拒绝扮演父亲角色 梁朝伟终于道出原因</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/3/n13209059.md#1">赵薇遭封杀 林心如一动作获赞“有先见之明”</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/2/n13206073.md#1">黄秋生庆60岁生日 杜汶泽祝“好人一生平安”</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/1/n13203565.md#1">演唱会场馆突遭取消 何韵诗宣布网上开唱</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/2/n13204952.md#1">美国女子在家睡觉 被陨石砸到</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/3/n13208358.md#1">空气炸锅做的这些蔬菜 好吃得停不下来</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/1/n13201822.md#1">远离失智、忧郁症！研究揭最佳睡眠时间</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/2/n13204454.md#1">高龄93岁 日本麦当劳最老员工照轮夜班</a></li>
-<li><a href="https://github.com/mzwgcg387/djy/blob/master/gb/21/9/3/n13207511.md#1">美国鳄鱼一口咬下空拍机 嘴巴冒出浓烟</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hraqrb3904/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hraqrb3904/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/4/n13210934.htm">【财商天下】北京调控过猛 楼市有大危机</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/4/n13210934.htm">【财商天下】北京调控过猛 楼市有大危机</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hraqrb3904/djy/blob/master/gb/21/9/4/n13210934.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hraqrb3904/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hraqrb3904/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hraqrb3904/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hraqrb3904/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hraqrb3904/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/9/4/n13210934.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
